--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ personalwebsite/static/img
 personalwebsite/apps/mainsite/migrations
 personalwebsite/media
 personalwebsite/db.sqlite3
+personalwebsite/settings/dev.py
+personalwebsite/settings/prod.py
