added spellchecking app TEMPORARY

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ personalwebsite/db.sqlite3
 personalwebsite/settings/dev.py
 personalwebsite/settings/prod.py
 manage.py
+personalwebsite/apps/blendy/migrations
